--- a/src/app/features/games/components/list/list.component.html
+++ b/src/app/features/games/components/list/list.component.html
@@ -1,11 +1,39 @@
-<div class="list-container">
-  <!-- <mat-list-item *ngFor="let game of games$">
-    <h3 matLine>{{ message.from }}</h3>
-    <p matLine>
-      <span> {{ message.subject }} </span>
-      <span class="demo-2"> -- {{ message.content }} </span>
-    </p>
-  </mat-list-item> -->
+<div class="list-container" style="max-width: 600px">
+  <mat-grid-list cols="12" rowHeight="3em" *ngFor="let game of games$ | async">
+    <mat-grid-tile colspan="4"
+      ><mat-checkbox class="checkbox-style">
+        <div class="team-name">
+          <img class="team-img" src="{{ game.away.iconURL }}" />
+          {{ game.away.name }}
+          <div *ngIf="game.away.teamID === game.fav.teamID; else elseBlock">
+            {{ game.spread }}
+          </div>
+          <ng-template #elseBlock>+{{ -game.spread }}</ng-template>
+        </div>
+      </mat-checkbox></mat-grid-tile
+    >
+    <!-- <mat-grid-tile colspan="1">@ </mat-grid-tile> -->
+    <mat-grid-tile colspan="4"
+      ><mat-checkbox class="checkbox-style">
+        <div class="team-name">
+          <img class="team-img" src="{{ game.home.iconURL }}" />
+          {{ game.home.name }}
+          <div *ngIf="game.home.teamID === game.fav.teamID; else elseBlock">
+            {{ game.spread }}
+          </div>
+          <ng-template #elseBlock>+{{ -game.spread }}</ng-template>
+        </div></mat-checkbox
+      ></mat-grid-tile
+    >
+    <mat-grid-tile colspan="2"
+      ><mat-checkbox class="checkbox-style"> Over </mat-checkbox></mat-grid-tile
+    >
+    <mat-grid-tile colspan="2"
+      ><mat-checkbox class="checkbox-style">
+        Under
+      </mat-checkbox></mat-grid-tile
+    >
+  </mat-grid-list>
 
   <!-- <mat-card
       *ngFor="let pokemon of pokemon$ | async"
