--- a/src/app/features/games/games.component.html
+++ b/src/app/features/games/games.component.html
@@ -6,7 +6,7 @@
         </div>
         <app-list
           [games$]="allGames$"
-          (gameEmitter)="selectGame($event)"
+          (pickEmitter)="selectPicks($event)"
         ></app-list>
       </div>
       <!-- <app-detail
