--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar>
+<mat-toolbar *ngIf="show">
   <mat-toolbar-row>
     <div>
       <a mat-button [routerLink]="'/dashboard'"> Dashboard </a>
