--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
 <nav-bar class="nav-bar"></nav-bar>
-<router-outlet></router-outlet>
+<div style="padding-top: 64px">
+    <router-outlet></router-outlet>
+</div>
