--- a/src/app/features/games/games.component.scss
+++ b/src/app/features/games/games.component.scss
@@ -1,34 +1,15 @@
-.header {
-    display: flex;
-    justify-content: center;
+.content {
+    padding: 5px;
+    display: grid;
+    grid-template-columns: 60% 40%;
 
-    img {
-        height: 150px;
-        margin-bottom: 60px;
-    }
-}
-
-.container {
-    margin: 50px;
-
-    .nav {
+    .list-header {
+        align-items: center;
         display: flex;
-        justify-content: flex-end;
-        margin-bottom: 20px;
-    }
-
-    .content {
-        display: grid;
-        grid-template-columns: 60% 40%;
-
-        .list-header {
-            align-items: center;
-            display: flex;
-            justify-content: space-between;
-            padding: 0 30px;
-            color:white;
-            font-size: 2em;
-            height: 2em;
-        }
+        justify-content: space-between;
+        padding: 0 30px;
+        color:white;
+        font-size: 2em;
+        height: 2em;
     }
 }
