--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <nav-bar class="nav-bar"></nav-bar>
-<div style="padding-top: 64px">
+<div style="padding-top: 64px; margin: 10px">
     <router-outlet></router-outlet>
 </div>
