--- a/src/app/features/dashboard/dashboard.component.css
+++ b/src/app/features/dashboard/dashboard.component.css
@@ -5,8 +5,15 @@ h1 {
 }
 
 h2 {
-  color: #698893;
-  margin-bottom: 50px;
+  color: #ffffff;
+  font-size: 20px;
+  margin-bottom: 0px;
+}
+
+h3 {
+  color: #ffffff;
+  font-size: 15px;
+  margin-bottom: 0px;
 }
 
 a {
