--- a/src/app/features/dashboard/dashboard.component.css
+++ b/src/app/features/dashboard/dashboard.component.css
@@ -27,5 +27,20 @@ a {
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
-  padding-top: 2%;
+  padding-top: 1%;
+}
+
+.dashboard-content {
+  display: flex;
+  width: 80%;
+}
+
+.flex-item {
+  flex-grow: 1;
+  /* margin-left: 10px;
+  margin-right: 10px; */
+}
+
+.flexExpand {
+  flex: 1 1 auto;
 }
