--- a/src/app/features/dashboard/dashboard.component.html
+++ b/src/app/features/dashboard/dashboard.component.html
@@ -1,15 +1,31 @@
 <!-- <mat-toolbar><a (click)="logout()">Log out</a></mat-toolbar> -->
+<div class="dashboard-header">
+  <h1>Parlay Club 2022</h1>
+</div>
 <div class="dashboard-content">
-  <div class="dashboard-header">
-    <h1>Parlay Club 2022</h1>
+  <div class="flex-item" style="margin-right: 10px;">
+    <h2 style="margin-bottom: 9px;">CURRENT GAMES</h2>
+    <app-games-list [games$]="allGames$" class="flex-item"></app-games-list>
   </div>
-  <app-games-list [games$]="allGames$"></app-games-list>
-  <div> <h2>MY PICKS</h2>
+  <div class="flex-item">
+    <div style="display: flex; margin-bottom: 5px">
+      <h2 >MY PICKS</h2>
+      <span class="flexExpand"></span>
+      <button
+        type="button"
+        mat-raised-button
+        color="primary"
+        routerLink="/picker"
+        style="-size: 20px;"
+      >
+        Update Picks
+      </button>
+    </div>
     <app-picks-list [picks$]="myPicks$"></app-picks-list>
-  </div>
 
-  <div *ngFor="let pickDict of otherPicks" >
-    <h2>{{pickDict.user.name}}'S PICKS</h2>
-    <app-picks-list [picks$]="pickDict.picks"></app-picks-list>
+    <div *ngFor="let pickDict of otherPicks">
+      <h2>{{ pickDict.user.name }}'S PICKS</h2>
+      <app-picks-list [picks$]="pickDict.picks"></app-picks-list>
+    </div>
   </div>
 </div>
