--- a/src/app/features/dashboard/games-list/games-list.component.html
+++ b/src/app/features/dashboard/games-list/games-list.component.html
@@ -1,4 +1,4 @@
-<div class="list-container" style="max-width: 440px">
+<div class="list-container">
   <mat-grid-list cols="10" rowHeight="3em" *ngFor="let game of games$ | async">
     <mat-grid-tile colspan="4">
       <div class="team-name">
