--- a/src/app/features/dashboard/games-list/games-list.component.css
+++ b/src/app/features/dashboard/games-list/games-list.component.css
@@ -1,11 +1,13 @@
 mat-grid-list {
   border-width: 1px 1px 0px 1px;
   border-style: solid;
+  border-color: #1e1e1e;
 }
 
 .list-container {
   border-width: 0px 0px 1px 0px;
   border-style: solid;
+  border-color: #1e1e1e;
   background-color: white;
 }
 
@@ -15,6 +17,18 @@ mat-grid-list {
   font-weight: bold;
   width: 100%;
   height: 100%;
+}
+
+.game-status {
+  display: flex;
+  align-items: center;
+  font-weight: bold;
+  width: 100%;
+  height: 100%;
+  border-left: 1px;
+  border-style:solid;
+  border-color: #1e1e1e;
+  padding-left: 3px;
 }
 
 .team-img {
