--- a/src/app/features/picker/picker.component.html
+++ b/src/app/features/picker/picker.component.html
@@ -1,6 +1,6 @@
 <div class="content">
   <div class="list">
-    <div class="list-header">MAKE YOUR PICKS FOR WEEK {{week}}</div>
+    <div class="list-header">WEEK {{week}} PICKS</div>
     <app-list
       [games$]="allGames$"
       [picks$]="allPicks$"
