--- a/src/app/features/dashboard/dashboard.component.html
+++ b/src/app/features/dashboard/dashboard.component.html
@@ -32,7 +32,7 @@
         type="button"
         mat-raised-button
         color="primary"
-        (click)="updateGames()"
+        (click)="updateClick()"
         style="-size: 20px"
         *ngIf="userID === 4"
       >
