--- a/src/app/features/games/games.component.html
+++ b/src/app/features/games/games.component.html
@@ -1,5 +1,5 @@
 <div class="content">
-  <div class="list">
+  <!-- <div class="list">
     <button
       type="button"
       mat-raised-button
@@ -10,5 +10,5 @@
     </button>
     <div class="list-header">GAMES FOR WEEK {{ week }}</div>
     <app-list [games$]="allGames$"></app-list>
-  </div>
+  </div> -->
 </div>
