--- a/src/app/features/dashboard/score-list/score-list.component.html
+++ b/src/app/features/dashboard/score-list/score-list.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="score">
   <div *ngFor="let score of scores$ | async" class="score-content">
     <div><h3>{{ score[0] }}:</h3></div>
     <span class="flexExpand"></span> 
