--- a/src/app/features/picker/components/list/list.component.html
+++ b/src/app/features/picker/components/list/list.component.html
@@ -142,9 +142,9 @@
   </div>
 </ng-template>
 
-<button type="button" mat-raised-button (click)="clear()" color="primary">
+<!-- <button type="button" mat-raised-button (click)="clear()" color="primary">
   Clear
-</button>
+</button> -->
 <button
   type="button"
   mat-raised-button
