--- a/src/app/features/dashboard/games-list/games-list.component.css
+++ b/src/app/features/dashboard/games-list/games-list.component.css
@@ -26,13 +26,32 @@ mat-grid-list {
   width: 100%;
   height: 100%;
   border-left: 1px;
-  border-style:solid;
+  border-style: solid;
   border-color: #1e1e1e;
   padding-left: 3px;
+}
+
+.game-status-mini {
+  display: flex;
+  align-items: center;
+  font-weight: bold;
+  width: 100%;
+  height: 100%;
+  border-left: 1px;
+  border-style: solid;
+  border-color: #1e1e1e;
+  padding-left: 3px;
+  font-size: .7em;
 }
 
 .team-img {
   padding-left: 5px;
   padding-right: 5px;
   max-height: 2em;
+}
+
+.team-img-mini {
+  padding-left: 5px;
+  padding-right: 5px;
+  max-height: .5em;
 }
