--- a/src/app/features/dashboard/games-list/games-list.component.html
+++ b/src/app/features/dashboard/games-list/games-list.component.html
@@ -41,6 +41,8 @@
     </mat-grid-list>
   </div>
 </div>
+
+<!-- -------------------------------------------------------------- -->
 <ng-template #mobile>
   <div class="list-container">
     <mat-grid-list
@@ -77,7 +79,7 @@
         ><div class="team-name">+{{ game.ou }}</div></mat-grid-tile
       >
       <mat-grid-tile colspan="5"
-        ><div class="game-status">{{ game.weekday() }} <br> {{ game.time() }}</div></mat-grid-tile
+        ><div class="game-status-mini">{{ game.shortStatusTop() }} <br> {{ game.shortStatusBottom() }}</div></mat-grid-tile
       >
     </mat-grid-list>
   </div>
